Basic Flask webapp and Docker Swarm entities
Interface with a Swarm and provide a snapshot of the current state to a
websocket and then do some rudimentary rendering of results as a proof
of concept.

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ verify_ssl = true
 [packages]
 docker = "*"
 flask = "*"
+flask-socketio = "*"
+werkzeug = "*"
+eventlet = "*"
 
 [requires]
 python_version = "3.7"
