--- a/app/Makefile
+++ b/app/Makefile
@@ -1,6 +1,7 @@
 all:
 	mkdir -p .build
-	git show HEAD:app/Dockerfile > .build/Dockerfile
+	# git show HEAD:app/Dockerfile > .build/Dockerfile
+	cp Dockerfile .build/Dockerfile
 	git archive --format tar -o .build/build.tar HEAD
 	docker build .build -t skep/app
 
