Optimise Dockerfile for build time/image efficiency

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7-alpine
+RUN pip install pipenv \
+ && apk add --update build-base gcc
 ADD build.tar /skep
-RUN pip install pipenv
-RUN apk add --update build-base gcc
-RUN cd /skep && pipenv sync
 WORKDIR /skep
+RUN pipenv sync
 CMD pipenv run gunicorn webapp -b 0.0.0.0:8080
