--- a/stats/Makefile
+++ b/stats/Makefile
@@ -1,5 +1,5 @@
 all:
-	mkdir -p .build/stats
-	git show HEAD:stats/Dockerfile > .build/stats/Dockerfile
-	git archive --format tar -o .build/stats/build.tar HEAD
-	cd .build/stats && docker build . -t skep/stats
+	mkdir -p .build/
+	git show HEAD:stats/Dockerfile > .build/Dockerfile
+	git archive --format tar -o .build/build.tar HEAD
+	cd .build/ && docker build . -t skep/stats
