--- a/stats/Dockerfile
+++ b/stats/Dockerfile
@@ -4,5 +4,5 @@ RUN apk --update add python3 git wget \
  && python3 get-pip.py \
  && git clone https://github.com/bobf/linux-metrics.git /linux-metrics \
  && cd /linux-metrics && python3 setup.py install
-COPY stats.py /stats.py
+ADD build.tar /
 CMD python3 /stats.py
