Optimise Dockerfile for build speed

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:3.7-alpine
 RUN pip install pipenv \
- && apk add --update build-base gcc
-ADD build.tar /skep
+ && apk add --update build-base gcc \
+ && mkdir /skep
+COPY Pipfile Pipfile.lock /skep/
 WORKDIR /skep
 RUN pipenv sync
+ADD build.tar .
 CMD pipenv run gunicorn webapp -b 0.0.0.0:8080
