Use eventlet instead of sync

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,5 +6,4 @@ COPY Pipfile Pipfile.lock /skep/
 WORKDIR /skep
 RUN pipenv sync
 ADD build.tar .
-RUN pipenv sync
-CMD pipenv run gunicorn webapp -b 0.0.0.0:8080
+CMD pipenv run gunicorn webapp -b 0.0.0.0:8080 -k eventlet
