--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,15 @@ services:
   stats:
     image: skep/stats
     volumes:
-      - "/proc:/hostfs/proc:ro"
+      - "/dev:/hostfs/dev:ro"
       - "/etc:/hostfs/etc:ro"
+      - "/proc:/hostfs/proc:ro"
     environment:
       SKEP_APP_URL: http://host.docker.internal:5000
       SKEP_HOST:
       LINUX_METRICS_ROOT_FS: '/hostfs'
-      DISK_DRIVES: 'sda:sda1'
+      DISKS: 'sda1'
+      FILE_SYSTEMS: '/'
       NETWORK_INTERFACES: 'eth0'
       LOG_LEVEL: 'DEBUG'
 
