--- a/app/package.json
+++ b/app/package.json
@@ -18,8 +18,7 @@
     "react-dom": "^16.8.6",
     "react-feather": "^1.1.6",
     "react-pose": "^4.0.8",
-    "socket.io-client": "^2.2.0",
-    "webpack-dev-server": "^3.3.1"
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -27,6 +26,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   }
 }
