Attempt to avoid nginx proxying issues
https://github.com/benoitc/gunicorn/issues/1797

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,4 +7,4 @@ WORKDIR /skep
 RUN pipenv sync
 ADD build.tar .
 RUN npm install && NODE_ENV=production npx webpack
-CMD pipenv run gunicorn webapp -b 0.0.0.0:8080 -k eventlet
+CMD pipenv run gunicorn webapp -b 0.0.0.0:8080 -k eventlet --no-sendfile
