Add container stats
Collate statistics for all containers running on a node and then
cross-reference with the relevant tasks to display CPU/memory and
network/disk I/O usage.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,12 @@ services:
       - "./app:/skep:rw"
 
   stats:
-    image: skep/stats
+    image: skep/stats:dev
     volumes:
       - "/dev:/hostfs/dev:ro"
       - "/etc:/hostfs/etc:ro"
       - "/proc:/hostfs/proc:ro"
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
     environment:
       SKEP_APP_URL: http://host.docker.internal:5000
       SKEP_HOST:
