--- a/stats/Makefile
+++ b/stats/Makefile
@@ -4,8 +4,9 @@ all:
 ifeq (${dev},1)
 	cp Dockerfile .build/
 	tar zcf .build/build.tar --exclude build.tar --exclude .build .
+	cd .build/ && docker build . -t skep/stats:dev
 else
 	git show HEAD:stats/Dockerfile > .build/Dockerfile
 	git archive --format tar -o .build/build.tar HEAD
-endif
 	cd .build/ && docker build . -t skep/stats
+endif
