--- a/app/Makefile
+++ b/app/Makefile
@@ -3,7 +3,7 @@ all:
 	mkdir -p .build/
 ifeq (${dev},1)
 	cp Dockerfile Pipfile Pipfile.lock .build/
-	tar zcf .build/build.tar --exclude build.tar  --exclude .build .
+	tar zcf .build/build.tar --exclude build.tar  --exclude .build --exclude node_modules .
 	cd .build/ && docker build . -t skep/app:dev
 else
 	git show HEAD:app/Dockerfile > .build/Dockerfile
