--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,11 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     environment:
       SKEP_APP_URL: http://app:8080
-      SKEP_HOST:
       DISKS:
-      FILE_SYSTEMS: '/'
-      NETWORK_INTERFACES: 'eth0'
-      LOG_LEVEL: 'INFO'
+      FILE_SYSTEMS:
+      NETWORK_INTERFACES:
+      LOG_LEVEL:
+      SKEP_HOST:
 
     networks:
       - skep
