Use fingerprinting to avoid asset caching issues
At Docker image build time, store the md5 fingerprints of the compiled
CSS and JS bundles. Use fingerprint in filename and URL to optimise
caching.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,23 @@
 FROM python:3.7-alpine
 RUN pip install pipenv \
- && apk add --update build-base gcc npm \
+ && apk add --update build-base gcc npm outils-md5 \
  && mkdir /skep
 COPY Pipfile Pipfile.lock /skep/
 WORKDIR /skep
 RUN pipenv sync
 ADD build.tar .
-RUN NODE_ENV=development npm install && NODE_ENV=production npx webpack
+RUN NODE_ENV=development npm install \
+ && NODE_ENV=production npx webpack \
+ && JS_MD5="$(md5sum files/bundle.js | awk '{ print $1 }')" \
+ && CSS_MD5="$(md5sum files/main.css | awk '{ print $1 }')" \
+ && mv files/bundle.js "files/bundle-${JS_MD5}.js" \
+ && mv files/main.css "files/main-${CSS_MD5}.css" \
+ && echo "export JS_MD5='${JS_MD5}'; export CSS_MD5='${CSS_MD5}';" > /assets.sh \
+ && echo "Assets compiled:" \
+ && cat /assets.sh
 
-CMD pipenv run gunicorn webapp -b 0.0.0.0:8080 -k eventlet --no-sendfile
+
+CMD . /assets.sh && pipenv run gunicorn webapp \
+                                        -b 0.0.0.0:8080 \
+                                        -k eventlet \
+                                        --no-sendfile
