Implement service/image URL templating
Allow a template URL to be provided for service name and image name. If
either `SERVICE_URL_TEMPLATE` or `IMAGE_URL_TEMPLATE` are set then they
will be used as Python format strings with components of each
service/image available,

e.g.:

IMAGE_URL_TEMPLATE=https://github.com/{organization}/{repository}/commits/{tag}

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+    environment:
+      SERVICE_URL_TEMPLATE:
+      IMAGE_URL_TEMPLATE: https://hub.docker.com/r/{organization}/{repository}
 
   stats:
     image: skep/stats
