Revert to eventlet
It turns out that eventlet was working great all along. flask_socketio
only works with 1 worker process as the client requests must all match
the same process.

Remove no-longer-needed `/swarm.json` route (not used anywhere).

--- a/app/Pipfile
+++ b/app/Pipfile
@@ -10,8 +10,7 @@ docker = "*"
 flask = "*"
 flask-socketio = "*"
 werkzeug = "*"
-tornado = "*"
-gunicorn = "*"
+eventlet = "*"
 
 [requires]
 python_version = "3.7"
