Create standalone service for harvesting swarm state
Previous design would harvest swarm state for every client. i.e. if 10
clients are active then the swarm state is harvested 10 times every 5
seconds or so. This can get very expensive on a busy swarm and results
in very slow web requests even for loading the main app.

Since we can't scale up our web server processes easily (due to a
restriction of flask_socketio limiting to only one worker process) it
makes more sense to move the harvesting code into a separate service
that does the expensive/slow processing at a given interval. This data
is sent to the web app which re-broadcasts it to all websocket clients
which is much more efficient.

--- a/agent/Makefile
+++ b/agent/Makefile
@@ -4,9 +4,9 @@ all:
 ifeq (${dev},1)
 	cp Dockerfile .build/
 	tar zcf .build/build.tar --exclude build.tar --exclude .build .
-	cd .build/ && docker build . -t skep/stats:dev
+	cd .build/ && docker build . -t skep/agent:dev
 else
-	git show HEAD:stats/Dockerfile > .build/Dockerfile
+	git show HEAD:agent/Dockerfile > .build/Dockerfile
 	git archive --format tar -o .build/build.tar HEAD
-	cd .build/ && docker build . -t skep/stats
+	cd .build/ && docker build . -t skep/agent
 endif
