--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,18 @@ services:
       LOG_LEVEL:
       SKEP_HOST:
 
+  calculator:
+    image: skep/calculator
+    networks:
+      - skep
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      SKEP_SECRET:
+      SKEP_APP_URL: http://app:8080
+      LOG_LEVEL:
+
   monitor:
     image: skep/monitor
     networks:
