Fix misc. loose ends re: new calculator service
Use correct paths, environment variables, etc. for new service and
various changes to project layout as a result of
replicating/restructuring things.

etc.

--- a/agent/Makefile
+++ b/agent/Makefile
@@ -4,9 +4,11 @@ all:
 ifeq (${dev},1)
 	cp Dockerfile .build/
 	tar zcf .build/build.tar --exclude build.tar --exclude .build .
+	cp -r ../shared/skep .build/skep
 	cd .build/ && docker build . -t skep/agent:dev
 else
 	git show HEAD:agent/Dockerfile > .build/Dockerfile
 	git archive --format tar -o .build/build.tar HEAD
+	cp -r ../shared/skep .build/skep
 	cd .build/ && docker build . -t skep/agent
 endif
