--- a/calculator/Dockerfile
+++ b/calculator/Dockerfile
@@ -6,4 +6,5 @@ COPY Pipfile Pipfile.lock /skep/
 WORKDIR /skep
 RUN pipenv sync
 ADD build.tar /skep
+COPY ./skep/ /skep/skep
 CMD ["pipenv", "run", "python", "app.py"]
