--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
+    "svg-url-loader": "^3.0.2",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
