--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^16.11.0",
     "react-feather": "^2.0.3",
     "react-google-charts": "^3.0.15",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
