Convert timestamps on chart data, smooth values
Use Redux reducer to convert timestamps on provided chart data.

Fix "no data" recognition - display a useful message when there is not
enough data available to render a chart.

When reducing number of datapoints for a chart (limited to 500) use the
mean of each datapoint across the reduced range to provide a
representative dataset.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,8 @@ services:
     environment:
       SKEP_SECRET:
       SKEP_APP_URL: http://app:8080
+      SKEP_CALCULATOR_DB_PATH: /calculator.db
+      SKEP_CALCULATOR_DB_PERSIST:
       LOG_LEVEL:
 
   monitor:
