Wording change - `calculator` => `charts`
"Charts" seems more appropriate for this service as charting is its only
responsibility.

--- a/charts/Makefile
+++ b/charts/Makefile
@@ -5,12 +5,12 @@ ifeq (${dev},1)
 	cp Dockerfile Pipfile Pipfile.lock .build/
 	tar zcf .build/build.tar --exclude build.tar  --exclude .build --exclude node_modules .
 	cp -r ../shared/skep .build/skep
-	cd .build/ && docker build . -t skep/calculator:dev
+	cd .build/ && docker build . -t skep/charts:dev
 else
-	git show HEAD:calculator/Dockerfile > .build/Dockerfile
-	git show HEAD:calculator/Pipfile > .build/Pipfile
-	git show HEAD:calculator/Pipfile.lock > .build/Pipfile.lock
+	git show HEAD:charts/Dockerfile > .build/Dockerfile
+	git show HEAD:charts/Pipfile > .build/Pipfile
+	git show HEAD:charts/Pipfile.lock > .build/Pipfile.lock
 	git archive --format tar -o .build/build.tar HEAD
 	cp -r ../shared/skep .build/skep
-	cd .build/ && docker build . -t skep/calculator
+	cd .build/ && docker build . -t skep/charts
 endif
