Move charts database for easier mounting
Remove need to create empty file before bind-mounting that file.
Instead, create an empty directory in Charts image and store database in
that directory on launch. This directory can be mounted (example
provided in docker-compose.yml)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,9 +46,12 @@ services:
     environment:
       SKEP_SECRET:
       SKEP_APP_URL: http://app:8080
-      SKEP_CHARTS_DB_PATH: /charts.db
+      SKEP_CHARTS_DB_PATH: /skep/database/charts.db
       SKEP_CHARTS_DB_PERSIST:
       LOG_LEVEL:
+    # To persist database storage, use a configuration similar to this:
+    # volumes:
+    #   - "/shared/network/storage/skep/:/skep/database/:rw"
 
   monitor:
     image: skep/monitor:${BUILD_TAG:-latest}
