--- a/charts/Dockerfile
+++ b/charts/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.7-alpine
 RUN pip install pipenv \
  && apk add --update build-base gcc npm outils-md5 \
- && mkdir /skep
+ && mkdir /skep \
+ && mkdir /skep/database/
 COPY Pipfile Pipfile.lock /skep/
 WORKDIR /skep
 RUN pipenv sync
