Fix logging for web app
Web app was not logging to stdout/stderr so logs were not easily
accessible.

Add some extra logging for chart events.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       # Used for internal communication only. Do NOT publish this port:
       SKEP_PRIVATE_PORT: '6666'
-      SKEP_CHARTS_URL: http://charts:8080/
+      SKEP_CHARTS_URL: http://charts:8080
 
   agent:
     image: skep/agent:${BUILD_TAG:-latest}
@@ -27,7 +27,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     environment:
       SKEP_APP_URL: http://app:6666
-      SKEP_CHARTS_URL: http://charts:8080/
+      SKEP_CHARTS_URL: http://charts:8080
       DISKS:
       FILE_SYSTEMS:
       NETWORK_INTERFACES:
@@ -65,7 +65,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     environment:
       SKEP_APP_URL: http://app:6666
-      SKEP_CHARTS_URL: http://charts:8080/
+      SKEP_CHARTS_URL: http://charts:8080
       SERVICE_URL_TEMPLATE:
       IMAGE_URL_TEMPLATE: https://hub.docker.com/r/{organization}/{repository}
 
