--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.7-alpine
 RUN pip install pipenv \
- && apk add --update build-base gcc npm outils-md5 \
+ && apk add --update build-base gcc npm outils-md5 python2 \
  && mkdir /skep
 COPY Pipfile Pipfile.lock /skep/
 WORKDIR /skep
