--- a/app/package.json
+++ b/app/package.json
@@ -9,33 +9,40 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
-    "moment": "^2.24.0",
+    "bootstrap": "^4.6.0",
+    "bufferutil": "^4.0.3",
+    "fibers": "^5.0.0",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "numeral": "^2.0.6",
-    "popper.js": "^1.16.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-feather": "^2.0.3",
+    "popper.js": "^1.16.1",
+    "process": "^0.11.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-google-charts": "^3.0.15",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4",
-    "socket.io-client": "^2.3.0"
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "sass": "^1.32.8",
+    "socket.io-client": "^4.0.0",
+    "utf-8-validate": "^5.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^2.1.1",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.13.0",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^0.23.1",
-    "svg-url-loader": "^3.0.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0"
+    "@babel/core": "^7.13.13",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-syntax-jsx": "^7.12.13",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.0",
+    "css-minimizer-webpack-plugin": "^1.3.0",
+    "mini-css-extract-plugin": "^1.4.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "svg-url-loader": "^7.1.1",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
