Provide public route to assets in app webserver
Compiled assets now exist in dist/ - update webserver configuration to
allow access to these files.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -11,7 +11,7 @@ RUN NODE_ENV=development npm install \
  && JS_MD5="$(md5sum dist/bundle.js | awk '{ print $1 }')" \
  && CSS_MD5="$(md5sum files/main.css | awk '{ print $1 }')" \
  && mv dist/bundle.js "dist/bundle-${JS_MD5}.js" \
- && mv files/main.css "files/main-${CSS_MD5}.css" \
+ && mv files/main.css "dist/main-${CSS_MD5}.css" \
  && echo "export JS_MD5='${JS_MD5}'; export CSS_MD5='${CSS_MD5}';" > /assets.sh \
  && echo "Assets compiled:" \
  && cat /assets.sh
