Completely remove references
CSS is loaded by JS bundle, not needed any more.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -9,10 +9,8 @@ ADD build.tar .
 RUN NODE_ENV=development npm install \
  && NODE_ENV=production npx webpack \
  && JS_MD5="$(md5sum dist/bundle.js | awk '{ print $1 }')" \
- && CSS_MD5="$(md5sum files/main.css | awk '{ print $1 }')" \
  && mv dist/bundle.js "dist/bundle-${JS_MD5}.js" \
- && mv files/main.css "dist/main-${CSS_MD5}.css" \
- && echo "export JS_MD5='${JS_MD5}'; export CSS_MD5='${CSS_MD5}';" > /assets.sh \
+ && echo "export JS_MD5='${JS_MD5}';" > /assets.sh \
  && echo "Assets compiled:" \
  && cat /assets.sh
 COPY ./skep/ /skep/skep
