Use Postgresql instead of sqlite3
SQLite tends to struggle a bit when requesting chart data, especially if
the data is not cached in RAM, so using Postgres with indexes should
really help speed things up.

--- a/charts/Dockerfile
+++ b/charts/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9-alpine
 RUN pip install pipenv \
- && apk add --update build-base gcc npm outils-md5 \
+ && apk add --update build-base gcc npm outils-md5 postgresql-dev \
  && mkdir /skep \
  && mkdir /skep/database/
 COPY Pipfile Pipfile.lock /skep/
