Always trust DB connections
Postgres DB operates on a private network, we can allow connections from
all sources without auth. Data is also non-sensitive.

Avoid division by zero error when building charts right after startup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
       replicas: 1
     environment:
       PGDATA: /var/lib/postgres/data
+      POSTGRES_HOST_AUTH_METHOD: trust
     # To persist database storage, use a configuration similar to this:
     # volumes:
     #   - "/shared/network/storage/skep/:/var/lib/postgres/data/:rw"
